2014-01-26  Carl Hetherington  <cth@carlh.net>

	* Change default JPEG2000 bandwith to 100MBps.

	* Updated fr_FR translation from Theirry Journet.

2014-01-24  Carl Hetherington  <cth@carlh.net>

	* Try to fix repeatedly-reported exceptions.

2014-01-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.63.6 released.

2014-01-23  Carl Hetherington  <cth@carlh.net>

	* Fix recovery of DCP encoding after a crash with a 3D DCP.

2014-01-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.63.5 released.

2014-01-21  Carl Hetherington  <cth@carlh.net>

	* Potentially major fix for bad A/V sync.

2014-01-19  Carl Hetherington  <cth@carlh.net>

	* Version 1.63.4 released.

2014-01-19  Carl Hetherington  <cth@carlh.net>

	* Updated sv_SE translation from Adam Klotblixt.

2014-01-15  Carl Hetherington  <cth@carlh.net>

	* Version 1.63.3 released.

2014-01-15  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix badly-labelled MXFs when in Interop mode.

2014-01-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.63.2 released.

2014-01-14  Carl Hetherington  <cth@carlh.net>

	* Fix problems with adding new soundtracks to FFmpeg content with
	no audio track.

	* Updated de_DE translation from Markus Raab.

	* Version 1.63.1 released.

2014-01-14  Carl Hetherington  <cth@carlh.net>

	* Try to fix subtitle problems when the video frame rate is being changed
	from content to DCP.

2014-01-13  Carl Hetherington  <cth@carlh.net>

	* Change 4:3 and 5:3 ratios to be precise rather than 1.33:1 and 1.66:1, and
	also tweak 1.19:1 (#306).

	* Version 1.63.0 released.

2014-01-12  Carl Hetherington  <cth@carlh.net>

	* Fix crashes when using -3dB options in locales with a , decimal separator.

	* Version 1.62.3 released.

2014-01-11  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix error on restarting a cancelled transcode job
	on Windows.

2014-01-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.62.2 released.

2014-01-10  Carl Hetherington  <cth@carlh.net>
